--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,29 @@
 {
+  "name": "current-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "devStart": "nodemon index.js",
+    "both": "concurrently \"cd server && nodemon index.js\" \"cd Frontend && npm run start\""
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "build": "^0.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "firebase": "^10.3.0",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
-    "nodemon": "^3.0.1"
+    "socket.io": "^2.5.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.1",
+    "nodemon": "^1.19.0"
   }
 }
